--- a/src/main/resources/anniv5Resources/localization/eng/painfulgrowthpack/Keywordstrings.json
+++ b/src/main/resources/anniv5Resources/localization/eng/painfulgrowthpack/Keywordstrings.json
@@ -7,6 +7,6 @@
   {
     "PROPER_NAME": "Growing Pain",
     "NAMES": ["growing\u00a0pain"],
-    "DESCRIPTION": "Whenever you fully block damage, increases by 1. When it reaches 10 or more, immediately remove #yGrowing #yPain [REMOVE_SPACE], deal 10 damage to EVERYONE, and gain 1 #yStrength [REMOVE_SPACE]."
+    "DESCRIPTION": "Whenever you play a card, increases equal to the energy spent. When it reaches 10 or more, immediately remove #yGrowing #yPain [REMOVE_SPACE], deal 10 damage to EVERYONE, and gain 1 #yStrength [REMOVE_SPACE]."
   }
 ]
